[gd_scene load_steps=13 format=3 uid="uid://beivko4wjgis"]

[ext_resource type="PackedScene" uid="uid://cyrjqlsuuv5" path="res://scenes/map_editor/story/stories/types/base_edit_action.tscn" id="1_fbavv"]
[ext_resource type="Script" path="res://scenes/map_editor/story/stories/types/despawn.gd" id="2_h2x7w"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_bglod"]
[ext_resource type="Texture2D" uid="uid://bkp8gbivdpjm" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown.png" id="4_r3v0j"]
[ext_resource type="Texture2D" uid="uid://ceku0o1lajwmu" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_pressed.png" id="5_rme72"]
[ext_resource type="Texture2D" uid="uid://bewr0f1ty1b3v" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_hover.png" id="6_4c6p3"]
[ext_resource type="PackedScene" uid="uid://gxr1dxy4v75y" path="res://scenes/ui/icons/pen.tscn" id="7_f80nd"]
[ext_resource type="Texture2D" uid="uid://pfrikdjfa7lc" path="res://assets/gui/menu/buttons/buttonSquare_brown.png" id="8_v0hes"]
[ext_resource type="Texture2D" uid="uid://b0unbl4vx0tow" path="res://assets/gui/menu/buttons/buttonSquare_brown_pressed.png" id="9_v7dox"]
[ext_resource type="Texture2D" uid="uid://by1obiwt54odo" path="res://assets/gui/menu/buttons/buttonSquare_brown_hover.png" id="10_1q034"]
[ext_resource type="PackedScene" path="res://scenes/ui/icons/arrow_left.tscn" id="11_2s5pg"]
[ext_resource type="PackedScene" path="res://scenes/ui/icons/arrow_right.tscn" id="12_c0okr"]

[node name="Despawn" instance=ExtResource("1_fbavv")]
script = ExtResource("2_h2x7w")

[node name="vip" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_right = -250.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_bglod")
text = "TR_WHO"
vertical_alignment = 1

[node name="x" type="LineEdit" parent="vip" index="0"]
layout_mode = 0
offset_left = 395.0
offset_right = 465.0
offset_bottom = 40.0
placeholder_text = "X"
alignment = 1
max_length = 2

[node name="y" type="LineEdit" parent="vip" index="1"]
layout_mode = 0
offset_left = 470.0
offset_right = 540.0
offset_bottom = 40.0
placeholder_text = "Y"
alignment = 1
max_length = 2

[node name="picker_button" type="TextureButton" parent="vip" index="2"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_r3v0j")
texture_pressed = ExtResource("5_rme72")
texture_hover = ExtResource("6_4c6p3")
texture_focused = ExtResource("6_4c6p3")

[node name="anchor" type="Control" parent="vip/picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="vip/picker_button/anchor" index="0" instance=ExtResource("7_f80nd")]

[node name="fields" type="Label" parent="." index="5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 220.0
offset_right = -250.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_bglod")
text = "TR_CLEARED_FIELDS"
vertical_alignment = 1

[node name="prev_button" type="TextureButton" parent="fields" index="0"]
layout_mode = 0
offset_left = 200.0
offset_right = 280.0
offset_bottom = 84.0
scale = Vector2(0.5, 0.5)
focus_neighbor_right = NodePath("../next_button")
texture_normal = ExtResource("8_v0hes")
texture_pressed = ExtResource("9_v7dox")
texture_hover = ExtResource("10_1q034")
texture_focused = ExtResource("10_1q034")

[node name="anchor" type="Control" parent="fields/prev_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="arrow_left" parent="fields/prev_button/anchor" index="0" instance=ExtResource("11_2s5pg")]

[node name="no" type="Label" parent="fields" index="1"]
layout_mode = 0
offset_left = 250.0
offset_right = 290.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("3_bglod")
text = "1/1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="next_button" type="TextureButton" parent="fields" index="2"]
layout_mode = 0
offset_left = 300.0
offset_right = 380.0
offset_bottom = 84.0
scale = Vector2(0.5, 0.5)
focus_neighbor_left = NodePath("../prev_button")
texture_normal = ExtResource("8_v0hes")
texture_pressed = ExtResource("9_v7dox")
texture_hover = ExtResource("10_1q034")
texture_focused = ExtResource("10_1q034")

[node name="anchor" type="Control" parent="fields/next_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="arrow_right" parent="fields/next_button/anchor" index="0" instance=ExtResource("12_c0okr")]

[node name="x1" type="LineEdit" parent="fields" index="3"]
layout_mode = 0
offset_left = 395.0
offset_top = -20.0
offset_right = 465.0
offset_bottom = 20.0
placeholder_text = "X1"
alignment = 1
max_length = 2

[node name="x2" type="LineEdit" parent="fields" index="4"]
layout_mode = 0
offset_left = 395.0
offset_top = 25.0
offset_right = 465.0
offset_bottom = 65.0
placeholder_text = "X2"
alignment = 1
max_length = 2

[node name="y1" type="LineEdit" parent="fields" index="5"]
layout_mode = 0
offset_left = 470.0
offset_top = -20.0
offset_right = 540.0
offset_bottom = 20.0
placeholder_text = "Y1"
alignment = 1
max_length = 2

[node name="y2" type="LineEdit" parent="fields" index="6"]
layout_mode = 0
offset_left = 470.0
offset_top = 25.0
offset_right = 540.0
offset_bottom = 65.0
placeholder_text = "Y2"
alignment = 1
max_length = 2

[node name="fields1_picker_button" type="TextureButton" parent="fields" index="7"]
layout_mode = 0
offset_left = 350.0
offset_top = -20.0
offset_right = 386.0
offset_bottom = 20.0
texture_normal = ExtResource("4_r3v0j")
texture_pressed = ExtResource("5_rme72")
texture_hover = ExtResource("6_4c6p3")
texture_focused = ExtResource("6_4c6p3")

[node name="anchor" type="Control" parent="fields/fields1_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="fields/fields1_picker_button/anchor" index="0" instance=ExtResource("7_f80nd")]

[node name="fields2_picker_button" type="TextureButton" parent="fields" index="8"]
layout_mode = 0
offset_left = 350.0
offset_top = 25.0
offset_right = 386.0
offset_bottom = 65.0
texture_normal = ExtResource("4_r3v0j")
texture_pressed = ExtResource("5_rme72")
texture_hover = ExtResource("6_4c6p3")
texture_focused = ExtResource("6_4c6p3")

[node name="anchor" type="Control" parent="fields/fields2_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="fields/fields2_picker_button/anchor" index="0" instance=ExtResource("7_f80nd")]

[connection signal="text_changed" from="vip/x" to="." method="_on_text_changed"]
[connection signal="text_changed" from="vip/y" to="." method="_on_text_changed"]
[connection signal="pressed" from="vip/picker_button" to="." method="_on_picker_button_pressed"]
[connection signal="pressed" from="fields/prev_button" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="fields/next_button" to="." method="_on_next_button_pressed"]
[connection signal="text_changed" from="fields/x1" to="." method="_on_text_changed"]
[connection signal="text_changed" from="fields/x2" to="." method="_on_text_changed"]
[connection signal="text_changed" from="fields/y1" to="." method="_on_text_changed"]
[connection signal="text_changed" from="fields/y2" to="." method="_on_text_changed"]
[connection signal="pressed" from="fields/fields1_picker_button" to="." method="_on_fields_1_picker_button_pressed"]
[connection signal="pressed" from="fields/fields2_picker_button" to="." method="_on_fields_2_picker_button_pressed"]
